# learnOpenGL

./: .gitignore  CMakeLists.txt  ChangeLog.md
Libs/: freetype.lib  glfw3.lib
Shaders/: 1-6-3shader.fs  4_10_aa_post.fs  4_10_anti_aliasing.fs  4_10_selfAA_post.fs  4_1_drawDepth.fs  4_2_drawBorder.fs  4_5_frameBuffers.fs  4_5_frameBuffers.vs  4_5_frameBuffers_screen.fs  4_5_frameBuffers_screen.vs  4_5_framebuffer_blur.fs  4_5_framebuffer_edge_detection.fs  4_5_framebuffer_grayscaling.fs  4_5_framebuffer_inversion.fs  4_5_framebuffer_sharpenKernel.fs  4_6_cubemaps.fs  4_6_reflectionCubeMap.fs.glsl  4_6_refractionCubeMap.fs.glsl  4_6_refractionCubeMap.vs.glsl  4_6_skybox.fs.glsl  4_6_skybox.vs.glsl  4_7_pointSize.fs.glsl  4_7_pointSize.vs.glsl  4_7_uniformBuffer.fs  4_7_uniformBuffer.vs  4_8_drawHouses.fs.glsl  4_8_drawHouses.gs.glsl  4_8_drawHouses.vs.glsl  4_8_drawNormal.fs.glsl  4_8_drawNormal.gs.glsl  4_8_drawNormal.vs.glsl  4_8_explodeObj.fs.glsl  4_8_explodeObj.gs.glsl  4_8_explodeObj.vs.glsl  4_8_skybox.fs.glsl  4_8_skybox.vs.glsl  4_8_testModelLoader.fs.glsl  4_8_testModelLoader.vs.glsl  4_9_asteroidInstancing.fs.glsl  4_9_asteroidInstancing.vs.glsl  (+61 more)
includes/glad/: glad.h
includes/learnopengl/: animation.h  animator.h  animdata.h  bone.h  camera.h  math.h  mesh.h  model.h  model_animation.h  objModelLoader.h  shader_s.h  skyBox.h
sources/: CMakeLists.txt
sources/0_0_TestFFmpeg/: 0_0_TestFFmpeg.cpp  CMakeLists.txt
sources/0_1_TestSDL2/: 0_1_TestSDL2.cpp  CMakeLists.txt
sources/1_10_ThreeDBox/: CMakeLists.txt  threeDbox.cpp  threeDbox.vs
sources/1_11_CameraClass/: CMakeLists.txt  cameraClass.cpp
sources/1_1_DrawTriangle/: 1-1drawTriangle.cpp  CMakeLists.txt
sources/1_2_DrawRectangle/: CMakeLists.txt  drawRectangle.cpp
sources/1_3_DualVAOandVBOs/: CMakeLists.txt  twoVAOsandVBOs.cpp
sources/1_4_TwoFragmentShaders/: CMakeLists.txt  resource.h  twoFragmentShaders.cpp
sources/1_5_UseUniform/: CMakeLists.txt  useUniform.cpp
sources/1_6_MoreAttributes/: CMakeLists.txt  moreAttributes.cpp
sources/1_7_ShaderClass/: 1-6-3shader.vs  1-6-3shaders_class.cpp  CMakeLists.txt
sources/1_8_RectangleTexture/: 1-7-1rectangleTexture.cpp  CMakeLists.txt  texture.fs  texture.vs
sources/1_9_CoordinateSystem/: 1-9-1coordinateSystem.cpp  CMakeLists.txt  coordinateSystem.fs
sources/2_1_LightCube/: 2-01-1lightCube.cpp  CMakeLists.txt  basic_lighting.fs  basic_lighting.vs  light.fs  light.vs
sources/2_2_DiffuseAndSpecular/: 2-04-1.cpp  CMakeLists.txt  basic_lighting.fs  light.fs  map.fs
sources/2_3_Material/: 2-03-1Material.cpp  CMakeLists.txt  material.fs
sources/2_4_LightCaster/: CMakeLists.txt  LightCaster.cpp
sources/2_5_MultipleLight/: CMakeLists.txt  light.fs  multipleLight.cpp  object.fs
sources/3_1_AssimpLoadModel/: CMakeLists.txt  loadModel.cpp
sources/4_10_MSAA/: 4_10_MSAA.cpp  4_10_MSAA_self.cpp  CMakeLists.txt
sources/4_1_DepthBuffer/: CMakeLists.txt  DepthBuffer.cpp
sources/4_2_StencilBuffer/: CMakeLists.txt  StencilBuffer.cpp
sources/4_3_Blend/: Blend.cpp  CMakeLists.txt
sources/4_4_FaceCulling/: CMakeLists.txt  faceCulling.cpp
sources/4_5_Framebuffer/: CMakeLists.txt  frameBuffer.cpp
sources/4_5_framebuffer_Postprocess/: CMakeLists.txt  framebuffer_postprocess.cpp
sources/4_6_EnvironmentMap/: CMakeLists.txt  EnvironmentMap.cpp
sources/4_6_EnvironmentMapRefract/: CMakeLists.txt  EnvironmentRefract.cpp
sources/4_6_Skybox/: CMakeLists.txt  Skybox.cpp
sources/4_7_AdvancedGLSL_PointSize/: AdvancedGLSLPointSize.cpp  CMakeLists.txt
sources/4_7_advancedGLSL/: CMakeLists.txt
sources/4_7_advancedGLSL_UniformBuffer/: AdvancedGLSLUniformBuffer.cpp  CMakeLists.txt
sources/4_8_GeometryShaderDrawNormal/: 4_8_GeometryShaderDrawNormal.cpp  CMakeLists.txt
sources/4_8_GeometryShaderExplodeObj/: 4_8_GeometryShaderExplodeObj.cpp  CMakeLists.txt
sources/4_8_geometryShaderDrawHouse/: 4_8_GeometryShaderDrawHouse.cpp  CMakeLists.txt
sources/4_9_Instancing/: 4_9_AsteroidInstancing.cpp  4_9_AsteroidNoInstancing.cpp  4_9_InstancingQuads.cpp  CMakeLists.txt
sources/5_10_PBR/: 5_10_PBR.cpp  5_10_PBR_Textured.cpp  CMakeLists.txt
sources/5_11_IBL/: 5_11_DiffuseIBL.cpp  5_11_SpecularIBL.cpp  5_11_SpecularIBL_Textured.cpp  CMakeLists.txt
sources/5_1_blinnPhong/: 5_1_BlinnPhong.cpp  CMakeLists.txt
sources/5_2_GammaCorrection/: 5_2_GammaCorrection.cpp  CMakeLists.txt
sources/5_3_Shadows/: 5_3_DepthShading.cpp  5_3_LightDepthBuffer.cpp  5_3_PointShadows.cpp  CMakeLists.txt
sources/5_4_NormalMap/: 5_4_NormalMap.cpp  CMakeLists.txt
sources/5_5_ParallaxMapping/: 5_5_ParallaxMapping.cpp  CMakeLists.txt
sources/5_6_HDRToneMapping/: 5_6_HDRToneMapping.cpp  CMakeLists.txt
sources/5_7_Bloom/: 5_7_Bloom.cpp  CMakeLists.txt
sources/5_8_DeferredShading/: 5_8_DeferredShading.cpp  CMakeLists.txt
sources/5_9_SSAO/: 5_9_SSAO.cpp  CMakeLists.txt
sources/6_1_DebugOutput/: 6_1_DebugOutput.cpp  CMakeLists.txt
sources/6_2_TextRendering/: 6_2_TextRendering.cpp  CMakeLists.txt
sources/6_3_BreakOut/: 6_3_BreakOut.cpp  CMakeLists.txt  ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  particle_generator.cpp  particle_generator.h  post_processor.h  power_up.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp
sources/7_1_WeightedBlendedOIT/: 7_1_WeightedBlendedOIT.cpp  CMakeLists.txt
sources/7_2_SkeletalAnimation/: 7_2_SkeletalAnimation.cpp  CMakeLists.txt
sources/7_3_CascadeShadowMap/: 7_3_CascadeShadowMap.cpp  CMakeLists.txt
sources/Common/: CMakeLists.txt  glad.c  modelLoaderCommon.cpp
